--- a/scss/blocks/_catalog.scss
+++ b/scss/blocks/_catalog.scss
@@ -60,7 +60,7 @@
 .sink {
     position: relative;
     background-color: #FAFAFA !important;
-    background-image: url(./../../image/catalog/1.png) !important;
+    background-image: url(./../image/catalog/1.png) !important;
     background-position: center center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -144,7 +144,7 @@
 
 .catalog__table {
     background-color: #FAFAFA !important;
-    background-image: url(./../../image/catalog/2.png) !important;
+    background-image: url(./../image/catalog/2.png) !important;
     background-position: center center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -167,7 +167,7 @@
 
 .catalog__tumb {
     background-color: #FAFAFA !important;
-    background-image: url(./../../image/catalog/3.png) !important;
+    background-image: url(./../image/catalog/3.png) !important;
     background-position: center center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -190,7 +190,7 @@
 
 .catalog__bar {
     background-color: #FAFAFA !important;
-    background-image: url(./../../image/catalog/4.png) !important;
+    background-image: url(./../image/catalog/4.png) !important;
     background-position: center center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -213,7 +213,7 @@
 
 .catalog__fas {
     background-color: #FAFAFA !important;
-    background-image: url(./../../image/catalog/5.png) !important;
+    background-image: url(./../image/catalog/5.png) !important;
     background-position: center center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
