--- a/scss/blocks/_section.scss
+++ b/scss/blocks/_section.scss
@@ -16,7 +16,8 @@
 .section__title {
     color: #232323;
     font-weight: 800;
-    font-size: 80px;
+    font-size: 84px;
+    letter-spacing: -3.36px;
     line-height: 1;
     margin-bottom: 30px !important;
 }
