--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,8 @@ body {
 .section__title {
   color: #232323;
   font-weight: 800;
-  font-size: 80px;
+  font-size: 84px;
+  letter-spacing: -3.36px;
   line-height: 1;
   margin-bottom: 30px !important;
 }
@@ -281,6 +282,9 @@ body {
   padding: 0 !important;
 }
 
+.catalog {
+  margin-bottom: 180px !important;
+}
 .catalog__title {
   display: flex;
   column-gap: 8px;
@@ -301,7 +305,7 @@ body {
 }
 @media (max-width: 560px) {
   .catalog__subtitle {
-    font-size: 20px;
+    font-size: 20px !important;
   }
 }
 .catalog__categories {
@@ -328,6 +332,13 @@ body {
 @media (max-width: 980px) {
   .catalog {
     padding-inline: 36px !important;
+    margin-bottom: 150px !important;
+  }
+}
+@media (max-width: 500px) {
+  .catalog {
+    padding-inline: 12px !important;
+    margin-bottom: 106px !important;
   }
 }
 
@@ -507,5 +518,124 @@ body {
     height: 338px;
     grid-column: 1/2;
     grid-row: 5/6;
+  }
+}
+
+.company {
+  margin-bottom: 180px !important;
+}
+@media (max-width: 768px) {
+  .company {
+    padding-inline: 36px !important;
+    margin-bottom: 150px !important;
+  }
+}
+@media (max-width: 700px) {
+  .company {
+    padding-inline: 12px !important;
+  }
+}
+
+.company__title {
+  display: flex;
+  column-gap: 8px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.3;
+  color: #9D9D9D;
+  margin-bottom: 8px !important;
+}
+.company__title span {
+  font-size: 12px;
+}
+
+.catalog__subtitle {
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 1;
+  letter-spacing: -1.6px;
+  margin-bottom: 20px !important;
+  text-wrap: balance;
+}
+@media (max-width: 768px) {
+  .catalog__subtitle {
+    text-wrap: auto;
+  }
+}
+@media (max-width: 700px) {
+  .catalog__subtitle {
+    font-size: 24px;
+    text-wrap: balance;
+  }
+}
+@media (max-width: 360px) {
+  .catalog__subtitle {
+    text-wrap: auto;
+    max-width: 275px;
+  }
+}
+
+.company__body {
+  display: flex;
+  column-gap: 24px;
+}
+@media (max-width: 1340px) {
+  .company__body {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
+}
+.company__left p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.3;
+}
+@media (max-width: 700px) {
+  .company__left p {
+    font-size: 16px;
+  }
+}
+.company__left p:not(:first-child) {
+  margin-bottom: 20px !important;
+}
+@media (max-width: 768px) {
+  .company__left p:not(:first-child) {
+    margin-bottom: 0px !important;
+  }
+}
+.company__left p:first-child {
+  margin-bottom: 8px !important;
+}
+@media (max-width: 1340px) {
+  .company__left {
+    display: contents;
+  }
+}
+
+@media (max-width: 768px) {
+  .company__img-1 {
+    max-width: 336px;
+    height: 417px;
+    object-fit: cover;
+  }
+}
+@media (max-width: 700px) {
+  .company__img-1 {
+    max-width: 336px;
+    height: 240px;
+  }
+}
+
+@media (max-width: 768px) {
+  .company__img-2 {
+    max-width: 320px;
+    height: 366px;
+  }
+}
+@media (max-width: 700px) {
+  .company__img-2 {
+    display: none;
   }
 }/*# sourceMappingURL=main.css.map */
