--- a/scss/blocks/_catalog.scss
+++ b/scss/blocks/_catalog.scss
@@ -1,5 +1,7 @@
 .catalog {
 
+    margin-bottom: 180px !important;
+
     &__title {
         display: flex;
         column-gap: 8px;
@@ -24,7 +26,7 @@
         margin-bottom: 30px !important;
 
         @media (max-width: 560px) {
-            font-size: 20px;
+            font-size: 20px !important;
         }
     }
     
@@ -53,7 +55,13 @@
     
     @media (max-width: 980px) {
        padding-inline: 36px !important;
+       margin-bottom: 150px !important;
     }
+
+    @media (max-width: 500px) {
+        padding-inline: 12px !important;
+        margin-bottom: 106px !important;
+     }
 
 }
 
